Test/git-issues/git-issue-3430/git-issue-3430y.dfy.expect
git-issue-3430y.dfy(6,20): Error: unresolved identifier: c
1 resolution/type errors detected in git-issue-3430y.dfy
